--- a/m03_v01.ipynb
+++ b/m03_v01.ipynb
@@ -1359,7 +1359,9 @@
   {
    "cell_type": "markdown",
    "id": "c89b431b",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Feature Engineering"
    ]
@@ -1367,12 +1369,13 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e4c20873",
+   "id": "822eb0c6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-05T01:55:51.895329Z",
      "start_time": "2022-02-05T01:55:51.859246Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1383,7 +1386,8 @@
    "cell_type": "markdown",
    "id": "f30b7532",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Criação das Hipoteses"
@@ -1471,7 +1475,8 @@
    "cell_type": "markdown",
    "id": "960dd3b0",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Lista Final de Hipóteses"
@@ -1527,8 +1532,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7be301b",
-   "metadata": {},
+   "id": "026304e1",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Feature Engineering"
    ]
@@ -1536,58 +1543,60 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "804a0a3a",
+   "id": "32970e29",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-05T02:24:15.901709Z",
      "start_time": "2022-02-05T02:24:15.723510Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
-    "# # year\n",
-    "# df2['year'] = df2['date'].dt.year\n",
+    "# year\n",
+    "df2['year'] = df2['date'].dt.year\n",
     "\n",
-    "# # month\n",
-    "# df2['month'] = df2['date'].dt.month\n",
+    "# month\n",
+    "df2['month'] = df2['date'].dt.month\n",
     "\n",
-    "# # day\n",
-    "# df2['day'] = df2['date'].dt.day\n",
+    "# day\n",
+    "df2['day'] = df2['date'].dt.day\n",
     "\n",
-    "# # week of year\n",
-    "# df2['week_of_year'] = df2['date'].dt.weekofyear\n",
+    "# week of year\n",
+    "df2['week_of_year'] = df2['date'].dt.weekofyear\n",
     "\n",
-    "# # year week\n",
-    "# df2['year_week'] = df2['date'].dt.strftime( '%Y-%W' )\n",
+    "# year week\n",
+    "df2['year_week'] = df2['date'].dt.strftime( '%Y-%W' )\n",
     "\n",
-    "# # competition since\n",
-    "# df2['competition_since'] = df2.apply(lambda x: datetime.datetime( year = x['competition_open_since_year'], month = x['competition_open_since_month'], day=1), axis = 1 )\n",
+    "# competition since\n",
+    "df2['competition_since'] = df2.apply(lambda x: datetime.datetime( year = x['competition_open_since_year'], month = x['competition_open_since_month'], day=1), axis = 1 )\n",
     "\n",
-    "# df2['competition_time_month'] = ( ( df2['date'] - df2['competition_since'] )/30 ).apply(lambda x: x.days ).astype( int )\n",
+    "df2['competition_time_month'] = ( ( df2['date'] - df2['competition_since'] )/30 ).apply(lambda x: x.days ).astype( int )\n",
     "                                     \n",
     "                                     \n",
     "                                     \n",
-    "# # promo since\n",
-    "# df2['promo_since'] = df2['promo2_since_year'].astype( str ) + '-' + df2['promo2_since_week'].astype( str )\n",
-    "# df2['promo_since'] =  df2['promo_since'].apply( lambda x: datetime.datetime.strptime( x + '-1', '%Y-%W-%w') - datetime.timedelta( days = 7 ) )\n",
-    "# df2['promo_time_week'] = ( ( df2['date'] - df2['promo_since'] )/7 ).apply( lambda x: x.days ).astype( int ) \n",
+    "# promo since\n",
+    "df2['promo_since'] = df2['promo2_since_year'].astype( str ) + '-' + df2['promo2_since_week'].astype( str )\n",
+    "df2['promo_since'] =  df2['promo_since'].apply( lambda x: datetime.datetime.strptime( x + '-1', '%Y-%W-%w') - datetime.timedelta( days = 7 ) )\n",
+    "df2['promo_time_week'] = ( ( df2['date'] - df2['promo_since'] )/7 ).apply( lambda x: x.days ).astype( int ) \n",
     "\n",
     "# # assortment\n",
     "df2['assortment'] = df2['assortment'].apply( lambda x: 'basic' if x == 'a' else 'extra' if x == 'b' else 'extended')\n",
     "\n",
     "# state holiday\n",
-    "# df2['state_holiday'] = df2['state_holiday'].apply( lambda x: 'public_holiday' if x == 'a' else 'easter_holiday' if x == 'b' else 'christmas' if x == 'c' else 'regular_day' )"
+    "df2['state_holiday'] = df2['state_holiday'].apply( lambda x: 'public_holiday' if x == 'a' else 'easter_holiday' if x == 'b' else 'christmas' if x == 'c' else 'regular_day' )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "98e71dd1",
+   "id": "5d3d5add",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-05T02:24:18.774799Z",
      "start_time": "2022-02-05T02:24:18.753336Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1960,99 +1969,333 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "d414443d",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-02-05T02:09:12.644737Z",
-     "start_time": "2022-02-05T02:09:12.594311Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "9e8c5489",
+   "metadata": {},
    "source": [
-    "h = df2.sample()\n",
-    "\n",
-    "delta = h['date'] - h['competition_since']"
+    "# Passo 03 - Filtragem de variaveis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "425eb9c6",
+   "execution_count": 62,
+   "id": "2e7581f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-05T02:09:24.266789Z",
-     "start_time": "2022-02-05T02:09:24.259107Z"
+     "end_time": "2022-02-05T14:51:03.914950Z",
+     "start_time": "2022-02-05T14:51:03.447885Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df3 = df2.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "466fd44e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-05T14:51:19.904757Z",
+     "start_time": "2022-02-05T14:51:19.826761Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>date</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>customers</th>\n",
+       "      <th>open</th>\n",
+       "      <th>promo</th>\n",
+       "      <th>state_holiday</th>\n",
+       "      <th>school_holiday</th>\n",
+       "      <th>store_type</th>\n",
+       "      <th>...</th>\n",
+       "      <th>is_promo</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>week_of_year</th>\n",
+       "      <th>year_week</th>\n",
+       "      <th>competition_since</th>\n",
+       "      <th>competition_time_month</th>\n",
+       "      <th>promo_since</th>\n",
+       "      <th>promo_time_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>5263</td>\n",
+       "      <td>555</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2008-09-01</td>\n",
+       "      <td>84</td>\n",
+       "      <td>2015-07-27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>6064</td>\n",
+       "      <td>625</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2007-11-01</td>\n",
+       "      <td>94</td>\n",
+       "      <td>2010-03-22</td>\n",
+       "      <td>279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>8314</td>\n",
+       "      <td>821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2006-12-01</td>\n",
+       "      <td>105</td>\n",
+       "      <td>2011-03-28</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>13995</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2009-09-01</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2015-07-27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2015-07-31</td>\n",
+       "      <td>4822</td>\n",
+       "      <td>559</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>regular_day</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2015-30</td>\n",
+       "      <td>2015-04-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2015-07-27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store  day_of_week       date  sales  customers  open  promo state_holiday  \\\n",
+       "0      1            5 2015-07-31   5263        555     1      1   regular_day   \n",
+       "1      2            5 2015-07-31   6064        625     1      1   regular_day   \n",
+       "2      3            5 2015-07-31   8314        821     1      1   regular_day   \n",
+       "3      4            5 2015-07-31  13995       1498     1      1   regular_day   \n",
+       "4      5            5 2015-07-31   4822        559     1      1   regular_day   \n",
+       "\n",
+       "   school_holiday store_type  ... is_promo  year  month  day  week_of_year  \\\n",
+       "0               1          c  ...        0  2015      7   31            31   \n",
+       "1               1          a  ...        1  2015      7   31            31   \n",
+       "2               1          a  ...        1  2015      7   31            31   \n",
+       "3               1          c  ...        0  2015      7   31            31   \n",
+       "4               1          a  ...        0  2015      7   31            31   \n",
+       "\n",
+       "   year_week  competition_since competition_time_month promo_since  \\\n",
+       "0    2015-30         2008-09-01                     84  2015-07-27   \n",
+       "1    2015-30         2007-11-01                     94  2010-03-22   \n",
+       "2    2015-30         2006-12-01                    105  2011-03-28   \n",
+       "3    2015-30         2009-09-01                     71  2015-07-27   \n",
+       "4    2015-30         2015-04-01                      4  2015-07-27   \n",
+       "\n",
+       "   promo_time_week  \n",
+       "0                0  \n",
+       "1              279  \n",
+       "2              226  \n",
+       "3                0  \n",
+       "4                0  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1826227f",
+   "metadata": {},
+   "source": [
+    "## Filtragem de linhas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "fae0900c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-05T14:52:37.676459Z",
+     "start_time": "2022-02-05T14:52:37.572039Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df3 = df3[(df3['open'] != 0) & (df3['sales'] > 0)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e45700f",
+   "metadata": {},
+   "source": [
+    "## Selecao de colunas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "fe6023c5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-05T14:54:21.098880Z",
+     "start_time": "2022-02-05T14:54:20.897537Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cols_drop = ['customers', 'open', 'promo_interval', 'month_map']\n",
+    "df3 = df3.drop( cols_drop, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a927829f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-05T14:54:24.410121Z",
+     "start_time": "2022-02-05T14:54:24.384517Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6737   39 days 08:00:00\n",
-       "dtype: timedelta64[ns]"
+       "Index(['store', 'day_of_week', 'date', 'sales', 'promo', 'state_holiday',\n",
+       "       'school_holiday', 'store_type', 'assortment', 'competition_distance',\n",
+       "       'competition_open_since_month', 'competition_open_since_year', 'promo2',\n",
+       "       'promo2_since_week', 'promo2_since_year', 'is_promo', 'year', 'month',\n",
+       "       'day', 'week_of_year', 'year_week', 'competition_since',\n",
+       "       'competition_time_month', 'promo_since', 'promo_time_week'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "ca4a5435",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-02-05T02:11:27.028906Z",
-     "start_time": "2022-02-05T02:11:27.018270Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1180"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "df3.columns"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dff5b13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbafd29a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60b700f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0884fc31",
+   "id": "b727126f",
    "metadata": {},
    "outputs": [],
    "source": []
