--- a/m06_v01.ipynb
+++ b/m06_v01.ipynb
@@ -27,22 +27,25 @@
     "import math\n",
     "import datetime\n",
     "\n",
+    "\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec\n",
     "from scipy import stats as ss\n",
-    "from sklearn.preprocessing import RobustScaler, MinMaxScaler, LabelEncoder\n",
     "from IPython.display import Image\n",
     "from IPython.core.display import HTML\n",
     "from boruta import BorutaPy\n",
-    "from sklearn.ensemble import RandomForestRegressor"
+    "\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LinearRegression, Lasso\n",
+    "from sklearn.preprocessing import RobustScaler, MinMaxScaler, LabelEncoder\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6b3c7106",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Helper functions"
    ]
@@ -55,11 +58,24 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:30:59.444548Z",
      "start_time": "2022-02-07T21:30:59.439941Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
+    "def mean_absolute_percentage_error( y, yhat ):\n",
+    "    return np.mean( np.abs( ( y - yhat ) / y ) )\n",
+    "\n",
+    "\n",
+    "def ml_error( model_name, y, yhat ):\n",
+    "    mae = mean_absolute_error( y, yhat )\n",
+    "    mape = mean_absolute_percentage_error( y, yhat )\n",
+    "    rmse = np.sqrt( mean_squared_error( y, yhat) )\n",
+    "    \n",
+    "    return pd.DataFrame( {'Model Name': model_name,\n",
+    "                          'MAE': mae,\n",
+    "                          'MAPE': mape,\n",
+    "                          'RMSE': rmse}, index=[0])\n",
+    "\n",
     "def cramer_v( x, y ):\n",
     "    cm = pd.crosstab( x, y ).values\n",
     "    n = cm.sum()\n",
@@ -94,8 +110,7 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:30:59.450234Z",
      "start_time": "2022-02-07T21:30:59.445986Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -237,7 +252,9 @@
   {
    "cell_type": "markdown",
    "id": "8f4ab3bb",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Rename Columns"
    ]
@@ -250,7 +267,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:31:00.491497Z",
      "start_time": "2022-02-07T21:31:00.439916Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -265,7 +283,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:31:00.496582Z",
      "start_time": "2022-02-07T21:31:00.492924Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -296,7 +315,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:31:00.502563Z",
      "start_time": "2022-02-07T21:31:00.497939Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2379,7 +2399,9 @@
   {
    "cell_type": "markdown",
    "id": "5ea9b4b6",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Passo 04 - Analise Exploratoria dos Dados"
    ]
@@ -2392,7 +2414,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:32:56.251042Z",
      "start_time": "2022-02-07T21:32:56.188353Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -2403,7 +2426,8 @@
    "cell_type": "markdown",
    "id": "3c57e942",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Analise Univariada"
@@ -2655,7 +2679,8 @@
    "cell_type": "markdown",
    "id": "e0138d22",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Analise Bivariada"
@@ -3482,7 +3507,9 @@
   {
    "cell_type": "markdown",
    "id": "1e05ecc4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Analise Multivariada"
    ]
@@ -3491,7 +3518,8 @@
    "cell_type": "markdown",
    "id": "787b1824",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Numerical Attributes"
@@ -3530,7 +3558,9 @@
   {
    "cell_type": "markdown",
    "id": "41d79b6b",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Categorical Attributes"
    ]
@@ -3543,7 +3573,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:33:17.273228Z",
      "start_time": "2022-02-07T21:33:17.260023Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3569,7 +3600,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:33:18.454526Z",
      "start_time": "2022-02-07T21:33:17.274597Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3604,7 +3636,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:33:18.599560Z",
      "start_time": "2022-02-07T21:33:18.456269Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3642,7 +3675,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:33:18.613338Z",
      "start_time": "2022-02-07T21:33:18.601805Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3967,7 +4001,9 @@
   {
    "cell_type": "markdown",
    "id": "bbc550b3",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Passo 06 - FEATURE SELECTION"
    ]
@@ -3980,7 +4016,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:33:28.593187Z",
      "start_time": "2022-02-07T21:33:28.378568Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3990,7 +4027,9 @@
   {
    "cell_type": "markdown",
    "id": "0c653bfd",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Split dataframe into training and test dataset"
    ]
@@ -4003,7 +4042,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:33:28.650472Z",
      "start_time": "2022-02-07T21:33:28.594653Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -4019,7 +4059,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:33:28.677866Z",
      "start_time": "2022-02-07T21:33:28.652154Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -4045,7 +4086,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T21:33:28.788629Z",
      "start_time": "2022-02-07T21:33:28.680279Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -4079,7 +4121,9 @@
   {
    "cell_type": "markdown",
    "id": "ec700c4d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Boruta as Feature Selector"
    ]
@@ -4092,7 +4136,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T22:21:49.199952Z",
      "start_time": "2022-02-07T21:33:28.790209Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -4157,7 +4202,9 @@
   {
    "cell_type": "markdown",
    "id": "d27707b3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Best Features from Boruta"
    ]
@@ -4170,7 +4217,8 @@
     "ExecuteTime": {
      "end_time": "2022-02-07T22:21:49.293863Z",
      "start_time": "2022-02-07T22:21:49.202234Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -4186,21 +4234,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cddbb26",
-   "metadata": {},
+   "id": "d42a434b",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Manual Feature Selection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "id": "351eae4e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-08T00:20:25.367855Z",
-     "start_time": "2022-02-08T00:20:25.363970Z"
-    }
+     "end_time": "2022-02-08T00:25:31.548652Z",
+     "start_time": "2022-02-08T00:25:31.542450Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -4230,8 +4281,359 @@
     "feat_to_add = ['date', 'sales']\n",
     "\n",
     "# final features\n",
-    "cols_selected_boruta.extend( feat_to_add )"
+    "# cols_selected_boruta.extend( feat_to_add )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90a9d6cf",
+   "metadata": {},
+   "source": [
+    "# Passo 7 - Machine Learning Modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "2bea8035",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-08T00:38:41.481380Z",
+     "start_time": "2022-02-08T00:38:41.441254Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "x_train = X_train[ cols_selected_boruta ]\n",
+    "x_test = X_test[ cols_selected_boruta ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a98a2b5",
+   "metadata": {},
+   "source": [
+    "## Average Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "04d6ad3d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-08T00:39:14.815375Z",
+     "start_time": "2022-02-08T00:39:14.588292Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Average Model</td>\n",
+       "      <td>1429.763326</td>\n",
+       "      <td>0.44785</td>\n",
+       "      <td>1939.32873</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Model Name          MAE     MAPE        RMSE\n",
+       "0  Average Model  1429.763326  0.44785  1939.32873"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aux1_test = x_test.copy()\n",
+    "aux1_test['sales'] = y_test.copy()\n",
+    "\n",
+    "aux1_train = x_train.copy()\n",
+    "aux1_train['sales'] = y_train.copy()\n",
+    "\n",
+    "# prediction\n",
+    "aux2 = aux1_train[['store', 'sales']].groupby( 'store' ).mean().reset_index().rename( columns = {'sales': 'predictions'})\n",
+    "aux1 = pd.merge( aux1_test, aux2, how='left', on='store' )\n",
+    "yhat_baseline = aux1['predictions']\n",
+    "\n",
+    "# performance\n",
+    "baseline_result = ml_error( 'Average Model', np.expm1( y_test), np.expm1(yhat_baseline) )\n",
+    "baseline_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "77627a9d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-08T00:40:17.224924Z",
+     "start_time": "2022-02-08T00:40:17.188449Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Average Model</td>\n",
+       "      <td>1354.800353</td>\n",
+       "      <td>0.455051</td>\n",
+       "      <td>1835.135542</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Model Name          MAE      MAPE         RMSE\n",
+       "0  Average Model  1354.800353  0.455051  1835.135542"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aux1 = x_test.copy()\n",
+    "aux1['sales'] = y_test.copy()\n",
+    "\n",
+    "# prediction\n",
+    "aux2 = aux1[['store', 'sales']].groupby( 'store' ).mean().reset_index().rename( columns = {'sales': 'predictions'})\n",
+    "aux1 = pd.merge( aux1, aux2, how='left', on='store' )\n",
+    "yhat_baseline = aux1['predictions']\n",
+    "\n",
+    "# performance\n",
+    "baseline_result = ml_error( 'Average Model', np.expm1( y_test), np.expm1(yhat_baseline) )\n",
+    "baseline_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9366601b",
+   "metadata": {},
+   "source": [
+    "## Linear Regression Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "31fd1d54",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-08T00:45:16.834673Z",
+     "start_time": "2022-02-08T00:45:16.187715Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>1867.089774</td>\n",
+       "      <td>0.292694</td>\n",
+       "      <td>2671.049215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Model Name          MAE      MAPE         RMSE\n",
+       "0  Linear Regression  1867.089774  0.292694  2671.049215"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model\n",
+    "lr = LinearRegression().fit( x_train, y_train )\n",
+    "\n",
+    "# prediction\n",
+    "yhat_lr = lr.predict( x_test )\n",
+    "\n",
+    "# performance\n",
+    "lr_result = ml_error( 'Linear Regression', np.expm1( y_test ), np.expm1(yhat_lr) )\n",
+    "lr_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d8d1a02",
+   "metadata": {},
+   "source": [
+    "## Linear Regression Regularized Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "fc25e970",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-08T00:47:02.023880Z",
+     "start_time": "2022-02-08T00:45:55.639568Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression - Lasso</td>\n",
+       "      <td>1869.571858</td>\n",
+       "      <td>0.288111</td>\n",
+       "      <td>2694.005137</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Model Name          MAE      MAPE         RMSE\n",
+       "0  Linear Regression - Lasso  1869.571858  0.288111  2694.005137"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model\n",
+    "lrr = Lasso( alpha=0.001 ).fit( x_train, y_train )\n",
+    "\n",
+    "# prediction\n",
+    "yhat_lrr = lrr.predict( x_test )\n",
+    "\n",
+    "# performance\n",
+    "lrr_result = ml_error( 'Linear Regression - Lasso', np.expm1( y_test ), np.expm1(yhat_lrr) )\n",
+    "lrr_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed347f06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
